cabal-version:       2.4
-- Initial package description 'hnix-store-core-benchmark.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                hnix-store-core-benchmark
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Domen Kozar
maintainer:          domen@dev.si
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable hnix-store-core-benchmark
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, hnix-store-core, binary, bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
